# apefat

./: .gitignore  Makefile  TODO.TXT
package/mxe/: build.sh
player/: slocumplayer.s
player/rom/: 0pglobal.s  Makefile  atari2600_2k.ld  atari2600_4k.ld  globals.inc  main.s  payload.s  slocumsong.inc
player/sim/: 0pglobal.s  Makefile  atari2600_sim.ld  globals.inc  payload.s  slocumlabels.s  vectors.s
songs/: DemoSong.psmk
src/: CMakeLists.txt  config.pri  src.pro
src/cmake/: DebianHardening.cmake  FindLame.cmake  FindSDL2.cmake  LocalTools.cmake
src/json/: CMakeLists.txt  json.pro
src/main/: Application.cpp  BarPreviewWidget.cpp  BarPreviewWidget.hpp  BarWidget.cpp  BarWidget.hpp  BarsTabWidget.cpp  BarsTabWidget.hpp  BeatWidget.cpp  BeatWidget.hpp  CMakeLists.txt  ChannelWidget.cpp  ChannelWidget.hpp  HiHatWidget.cpp  HiHatWidget.hpp  MainWidget.cpp  MainWidget.hpp  MainWindow.cpp  MainWindow.hpp  NoteWidget.cpp  NoteWidget.hpp  PitchComboBox.cpp  PitchComboBox.hpp  PlayerEmulation.cpp  PlayerEmulation.hpp  PlayerWidget.cpp  PlayerWidget.hpp  PsmkBeatWidget.cpp  PsmkBeatWidget.hpp  PsmkClipboard.cpp  PsmkClipboard.hpp  PsmkConfig.cpp  PsmkConfig.hpp  PsmkContextMenu.cpp  PsmkContextMenu.hpp  PsmkHiHatWidget.cpp  PsmkHiHatWidget.hpp  PsmkInstrumentComboBox.cpp  PsmkInstrumentComboBox.hpp  PsmkInstrumentsWidget.cpp  PsmkInstrumentsWidget.hpp  (+55 more)
src/mos6502/: CMakeLists.txt  PlayerConfig.cpp  PlayerConfig.hpp  SoundSDL2.cpp  SoundSDL2.hpp  System.hpp  TIASnd.cpp  TIASnd.hpp  bspf.hpp  cpu6502.cpp  cpu6502.hpp  mos6502.pro
src/notemapping/: CMakeLists.txt  Tone0_11.c  Tone12_13_ntsc.c  Tone12_13_pal.c  Tone14_15_ntsc.c  Tone14_15_pal.c  Tone1_ntsc.c  Tone1_pal.c  Tone2_3_ntsc.c  Tone2_3_pal.c  Tone4_5_ntsc.c  Tone4_5_pal.c  Tone6_7_9_10_ntsc.c  Tone6_7_9_10_pal.c  Tone8_ntsc.c  Tone8_pal.c  Tones.c  Tones.h  notemapping.pro
src/resources/: EmptySong.psmk  apefat.qrc
src/test/: test.pro
